Fixed alignment of food.html and exercise.html

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -47,14 +47,14 @@ html {
 
 .wrapper {
   display: flex;
-  flex-direction: column;
-  padding: 1rem;
-  max-width: 80vw;
+  justify-content: space-between;
+  /* padding: 2rem; */
+  max-width: 100vw;
   width: 100%;
   margin: 0 auto;
-  background-color: rgba(187, 204, 238, 0.5);
+  /* background-color: rgba(187, 204, 238, 0.5); */
+  background-color: var(--accent-color2);
 
-  justify-content: space-between;
 }
 
 /* HEADER styles */
@@ -64,20 +64,30 @@ html {
   height: auto;
 }
 
+
+.navlinks {
+  padding-top: 15px;
+
+}
+
 ul.navlinks {
   display: none;
 }
 
-.navlinks {
-  padding-top: 15px;
-}
+/* .divider {
+  background-color: var(--accent-color1);
+  width: 800px;
+  margin-top: 40px;
+  height: 4px;
+} */
 
 .navlinks ul {
   display: flex;
   list-style-type: none;
-  justify-content: space-between;
-
   gap: 2rem;
+  margin: 1rem;
+  max-width: 80vw;
+  width: 800px;
 }
 
 .navlinks ul li {
@@ -116,9 +126,10 @@ ul.navlinks {
 }
 
 .logo-container {
-  display: flex;
-  justify-content: space-between;
-  margin: 2.2rem 0;
+  /* display: flex;
+  justify-content: space-between; */
+  left: 0;
+  margin: 2rem;
 }
 
 .logo-image {
@@ -138,17 +149,19 @@ ul.navlinks {
 .hero {
   width: 500px;
   height: auto;
+  margin: 0 auto;
 }
 
 .hero-container {
   display: flex;
   /* justify-content: space-between; */
   align-content: center;
-  max-width: 100vw;
+  max-width: 70vw;
   width: 100%;
   background-color: rgba(255, 235, 59, 0.8);
   border-radius: 10% 5% 5% 10%;
   outline: none;
+  margin-top: 2rem;
 }
 
 /* USER LOGIN Styles */
@@ -337,7 +350,7 @@ select:focus {
 .logo-text {
   font-size: var(--font-size-large);
   font-family: var(--primary-font2);
-  margin-left: 2rem;
+  margin-left: 1rem;
 }
 
 .highlight {
@@ -374,7 +387,7 @@ body {
   font-size: 2rem;
   padding: 0.2rem 2vw;
   position: absolute;
-  left: 0.8rem;
+  left: 0.2rem;
   top: 15px;
   text-align: right;
 }
@@ -449,7 +462,7 @@ form {
 
 label {
   width: 200px;
-  margin-right: 33px;
+  margin-right: 2rem;
 }
 
 select {
@@ -554,13 +567,23 @@ footer {
   margin-top: 1.5rem;
 }
 
-@media all and (max-width: 100px) {
+@media all and (min-width: 100px) {
   .wrapper {
+    display: flex;
     max-width: 100vw;
     width: 100%;
     padding: 0;
     margin: 0;
   }
+
+  input[type="email"] {
+    max-width: 50vw;
+    width: 200px;
+    width: 100%;
+    margin-left: 1rem;
+  }
+
+
 
   .sticker {
     margin-bottom: 15rem;
@@ -579,10 +602,12 @@ footer {
     padding: var(--font-size-small);
   }
 
-  input[type="email"] {
-    max-width: 150px;
+  input[type="email"],
+  .sign-up {
+    max-width: 100vw;
+    width: 200px;
     width: 100%;
-    margin-left: 2.5rem;
+
   }
 
   .welcome {
@@ -642,7 +667,7 @@ footer {
   .logo-container {
     display: flex;
     flex-direction: column;
-    margin: 0.2rem;
+    margin: 0.5rem;
   }
 }
 
@@ -650,6 +675,13 @@ footer {
   .hero {
     display: none;
   }
+
+
+
+
+
+
+
 }
 
 @media all and (max-width: 510px) {
@@ -657,6 +689,15 @@ footer {
     width: 20rem;
     height: 200px;
   }
+
+  input[type="email"],
+  .sign-up {
+    max-width: 100vw;
+    width: 150px;
+
+  }
+
+
 }
 
 @media all and (max-width: 675px) {
@@ -667,6 +708,20 @@ footer {
   .navlinks ul {
     display: none;
   }
+
+  input[type="email"],
+  .sign-up {
+    max-width: 100vw;
+    width: 200px;
+
+  }
+
+
+
+  .logo-text {
+    display: none;
+  }
+
 
   ul.open {
     display: flex;
@@ -695,6 +750,12 @@ footer {
 
   .navlinks ul {
     flex-direction: column;
+    align-items: center;
+    right: 0;
+  }
+
+  .logo-image {
+    margin: 0 auto;
   }
 
   .navlinks ul li a::after {
@@ -707,10 +768,7 @@ footer {
     align-items: center;
   }
 
-  .logo-container {
-    display: flex;
-    flex-direction: column;
-  }
+
 }
 
 @media all and (max-width: 800px) {
